# duckx-plusplus

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  COMMIT_MESSAGE_TEMPLATE.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  README_zh.md
.github/: git-commit-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
cmake/: DuckxDLLConfig.cmake  duckx.pc.in  duckxConfig.cmake.in  version.rc.in
docs/: DoxygenLayout.xml  NAVIGATION.md  ROADMAP.md  SAMPLES.md  SAMPLE_FILES_GUIDE.md  STYLE_APPLICATION_SYSTEM.md  STYLE_SYSTEM_GUIDE.md  TESTS.md
docs/predefined_styles/: README.md  academic_paper.xml  business_document.xml  modern_report.xml  technical_documentation.xml
include/: BaseElement.hpp  BaseElement_Core.hpp  BaseElement_Paragraph.hpp  BaseElement_Run.hpp  BaseElement_Table.hpp  Body.hpp  Document.hpp  DocxFile.hpp  DocxFile_pimpl_example.hpp  DrawingElement.hpp  Error.hpp  HeaderFooterBase.hpp  HeaderFooterManager.hpp  HyperlinkManager.hpp  Image.hpp  MediaManager.hpp  OutlineManager.hpp  PageLayoutManager.hpp  StyleManager.hpp  TextBox.hpp  XmlStyleParser.hpp  constants.hpp  duckx.hpp  duckx_dll_config.hpp  duckx_dll_export.hpp  duckx_pimpl.hpp  duckxiterator.hpp  memory_safety_utils.hpp  test_utils.hpp
samples/: CMakeLists.txt  sample1.cpp  sample10.cpp  sample11.cpp  sample12.cpp  sample13.cpp  sample14.cpp  sample15.cpp  sample16_body_result_api.cpp  sample17_deprecated_style_manager.cpp  sample18_deprecated_styled_document.cpp  sample19_deprecated_style_status.cpp  sample2.cpp  sample20_complete_style_system.cpp  sample21_style_priority_test.cpp  sample22_style_reading_system.cpp  sample23_complete_style_system.cpp  sample24_style_system_test.cpp  sample25_xml_style_parser.cpp  sample26_style_set_usage.cpp  sample27_technical_document_demo.cpp  sample28_document_structure_demo.cpp  sample29_simple_outline_demo.cpp  sample3.cpp  sample4.cpp  sample5.cpp  sample6.cpp  sample7.cpp  sample8.cpp  sample9.cpp  sample_comprehensive_test.cpp
src/: BaseElement.cpp  BaseElement_Core.cpp  BaseElement_Paragraph.cpp  BaseElement_Run.cpp  BaseElement_Table.cpp  Body.cpp  Document.cpp  DocxFile.cpp  DrawingElement.cpp  HeaderFooterBase.cpp  HeaderFooterManager.cpp  HyperlinkManager.cpp  Image.cpp  MediaManager.cpp  OutlineManager.cpp  PageLayoutManager.cpp  StyleManager.cpp  TextBox.cpp  XmlStyleParser.cpp  duckx.cpp
test/: CMakeLists.txt  basic_tests.cpp  doctest.h  iterator_tests.cpp  test_base_element.cpp  test_basic.cpp  test_body.cpp  test_body_result_api.cpp  test_complete_style_implementation.cpp  test_document.cpp  test_docxFile.cpp  test_headerFooterManager.cpp  test_hyperlinkManager.cpp  test_image.cpp  test_iterator.cpp  test_outline_manager.cpp  test_outline_manager_unified.cpp  test_page_layout_manager.cpp  test_platform_detection.cpp  test_result_api.cpp  test_style_application.cpp  test_style_application_implementation.cpp  test_style_implementation_validation.cpp  test_style_manager.cpp  test_style_reading.cpp  test_style_set_integration.cpp  test_style_system_basic.cpp  test_table_formatting.cpp  test_textBox.cpp  test_xml_style_parser.cpp  test_xml_style_parser_complete.cpp
